[FIX] Product 모듈 테스트 코드 작성 중, 기능이 제대로 돌아가도록 수정